--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
               <a href="./pages/configurador.html" class="cta-configurator">Personaliza Ahora</a>
               <div class="dropdown-item">
                 <div class="image-wrapper">
-                  <img src="../assets/images/Agua-Potable.webp" alt="Agua potable">
+                  <img src="assets/images/Agua-Potable.webp" alt="Agua potable">
                 </div>
                 <a href="./pages/agua-potable.html">Agua potable</a>
               </div>
               <div class="dropdown-item">
                 <div class="image-wrapper">
-                  <img src="../assets/images/agua-regenerada.webp" alt="Agua regenerada">
+                  <img src="assets/images/agua-regenerada.webp" alt="Agua regenerada">
                 </div>
                 <a href="./pages/agua-regenerada.html">Agua regenerada</a>
               </div>
