--- a/pages/resumen.html
+++ b/pages/resumen.html
@@ -10,84 +10,84 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body id="configurator-page">
-  <!-- Navbar centrado -->
+ <!-- Navbar centrado -->
   <div id="navbar">
     <div class="logo-container">
       <img src="../assets/images/logo.png" alt="Logo CEATA">
     </div>
     <!-- Botón hamburguesa para móviles -->
-    <div class="menu-toggle" onclick="toggleMenu()">
+   <div class="menu-toggle" onclick="toggleMenu()">
       <div class="bar"></div>
       <div class="bar"></div>
       <div class="bar"></div>
     </div>
     <nav class="navbar" style="justify-content: center; flex-direction: column;">
       <ul class="nav-links" style="margin-top: 10px;">
-        <li><a href="/index.html">CEATA</a></li>
+        <li><a href="../index.html">CEATA</a></li>
         <li class="dropdown">
           <a href="#">Gestión del agua</a>
           <div class="dropdown-content">
             <div class="dropdown-item">
               <div class="image-wrapper">
-                <img src="/assets/images/submenua.webp" alt="Asesoramiento técnico">
+                <img src="../assets/images/submenua.webp" alt="Asesoramiento técnico">
               </div>
               <a href="#">Asesoramiento técnico</a>
             </div>
             <div class="dropdown-item">
               <div class="image-wrapper">
-                <img src="/assets/images/submenub.webp" alt="Calidad del agua">
+                <img src="../assets/images/submenub.webp" alt="Calidad del agua">
               </div>
               <a href="#">Calidad del agua</a>
             </div>
             <div class="dropdown-item">
               <div class="image-wrapper">
-                <img src="/assets/images/submenuc.webp" alt="Compromisos y Valores">
+                <img src="../assets/images/submenuc.webp" alt="Compromisos y Valores">
               </div>
               <a href="#">Compromisos y Valores</a>
             </div>
             <div class="dropdown-item">
               <div class="image-wrapper">
-                <img src="/assets/images/submenud.webp" alt="Calidad y Medioambiente">
+                <img src="../assets/images/submenud.webp" alt="Calidad y Medioambiente">
               </div>
               <a href="#">Calidad y Medioambiente</a>
             </div>
             <div class="dropdown-item">
               <div class="image-wrapper">
-                <img src="/assets/images/submenue.webp" alt="Consultoría e ingeniería">
+                <img src="../assets/images/submenue.webp" alt="Consultoría e ingeniería">
               </div>
               <a href="#">Consultoría e ingeniería</a>
             </div>
             <div class="dropdown-item">
               <div class="image-wrapper">
-                <img src="/assets/images/submenuf.webp" alt="Digitalización/SmartWater">
+                <img src="../assets/images/submenuf.webp" alt="Digitalización/SmartWater">
               </div>
               <a href="#">Digitalización/SmartWater</a>
             </div>
             <div class="dropdown-item">
               <div class="image-wrapper">
-                <img src="/assets/images/submenug.webp" alt="Asistencia postventa">
+                <img src="../assets/images/submenug.webp" alt="Asistencia postventa">
               </div>
               <a href="#">Asistencia postventa</a>
             </div>
           </div>
         </li>
         <li><a href="#">I+D+I</a></li>
-        <li class="dropdown">
+           <li class="dropdown">
           <a href="#">Soluciones</a>
           <div class="dropdown-content">
             <div class="dropdown-inner">
-              <a href="/pages/configurador.html" class="cta-configurator">Configura tu solución</a>
+              <a href="configurador.html" class="cta-configurator"> Personaliza ahora</a>
               <div class="dropdown-item">
                 <div class="image-wrapper">
                   <img src="../assets/images/Agua-Potable.webp" alt="Agua potable">
                 </div>
-                <a href="/pages/agua-potable.html">Agua potable</a>
+                <a href="agua-potable.html">Agua potable</a>
               </div>
               <div class="dropdown-item">
                 <div class="image-wrapper">
                   <img src="../assets/images/Agua-regenerada.webp" alt="Agua regenerada">
                 </div>
-                <a href="/pages/agua-regenerada.html">Agua regenerada</a>
+                <a href="agua-regenerada.html">Agua regenerada</a>
               </div>
             </div>
           </div>
